<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iKakebo</string>
    <string name="amount_euro_format">€ %.2f</string>
    <string name="delete_all_expenses">Delete all expenses</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="amount">€ 0.00</string>
    <string name="time">12:00</string>
    <string name="date">2020/01/01</string>
    <string name="save_expense">Save expense</string>
    <string name="add_expense">Add expense</string>
    <string name="edit_expense">Edit expense</string>

</resources>
